--- a/tresentregaa.html
+++ b/tresentregaa.html
@@ -66,6 +66,7 @@
 <!-- PRODUCTOS -->
 <main class="conteiner" id="productosnow">
   <input id="inputBuscar" type="text" placeholder="Buscar productos...">
+  
   <div id="productos">
     <!-- Repite este bloque para cada producto -->
     <div class="producto">
@@ -141,6 +142,7 @@
     </div>
   </div>
   <h3>Total: $<span id="totalCarrito">0</span></h3>
+  <a href="#" id="botonComprar" class="boton">Comprar</a>
 </section>
 
 <script src="tresentregaa.js"></script>
